--- a/Interfaz/Static/style.css
+++ b/Interfaz/Static/style.css
@@ -25,14 +25,12 @@ body {
     text-decoration: none;
     font-size: 17px;
 }
-  
-/* Change the color of links on hover */
+
 .topnav a:hover {
     background-color: #ddd;
     color: black;
 }
-  
-  /* Add a color to the active/current link */
+
 .topnav a.active {
     background-color: red;
     color: white;
@@ -87,4 +85,13 @@ body {
 .titulo{
     display: grid;
     place-items: center;
+}
+
+textarea {
+    background: url(http://i.imgur.com/2cOaJ.png);
+    background-attachment: local;
+    background-repeat: no-repeat;
+    padding-left: 35px;
+    padding-top: 10px;
+    border-color:#ccc;
 }
